[tool.poetry]
name = "openapitodiscord"
version = "0.1.0"
description = ""
authors = ["Ben <ben.arteii@proton.me>"]
license = "AGPL-3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
discord-py = "^2.3.2"
httpx = "^0.26.0"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
